<resources>
    <string name="app_name">UIWearProxy</string>
    <string name="start_setting_preference">Set Preference</string>
    <string name="draw_hint">Click on the highlight area to select, press back to save</string>
    <string name="null_back">You did not select any area! click BACK again to exit</string>
    <string name="saved_back">Prefer area saved! click BACK again to exit</string>

    <string name="service_accessibility">UIWear Accessibility Service</string>
    <string name="start">Start Proxy</string>
    <string name="stop">Stop UIWear</string>
    <string name="service_not_enabled">UIWear Accessibility Service not enabled!</string>
    <string name="exit_preference_setting">Exited Setting!</string>
    <string name="service_enabled">UIWear service started</string>
    <string name="turn_off_proxy_service">Please manually turn off UIWear accessibility service</string>
    <string name="exit_preference_confirm">Have you finished preference setting?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="running_phone_proxy">UIWear is running</string>
    <string name="setting_preference">Setting preference</string>
    <string name="not_ready_for_selection">Not ready for selection</string>

    <string name="title_activity_preferred_apps_setting">PreferredApps</string>
    <string name="app_icon">app_icon</string>
    <string name="start_selecting_app">Select App</string>
    <string name="action_set_all">Set all</string>
    <string name="launch_error">" cannot launch!"</string>
    <string name="service_notify">Notify Service</string>
    <string name="cache_status">Cache Status</string>
    <string name="reset_cache">Purge Cache</string>
    <string name="reset_diff">Reset Diff</string>
    <string name="action_dump">Dump app info</string>
</resources>
