<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:onClick="startProxyService"
        android:text="@string/start"
        android:textAppearance="@android:style/TextAppearance"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_reset_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/tv_start"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:onClick="resetDiff"
        android:text="@string/reset_diff"
        android:textAppearance="@android:style/TextAppearance"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_pref_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_start"
        android:layout_below="@+id/tv_start"
        android:layout_marginTop="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="startPreferenceSetting"
        android:text="@string/start_setting_preference"
        android:textAppearance="@android:style/TextAppearance"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_set_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_reset_diff"
        android:layout_below="@+id/tv_reset_diff"
        android:layout_marginTop="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="startSelectingApp"
        android:text="@string/start_selecting_app"
        android:textAppearance="@android:style/TextAppearance"
        tools:targetApi="lollipop" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_cache_status"
        android:onClick="setCacheStatus"
        android:layout_alignStart="@+id/tv_pref_set"
        android:layout_below="@+id/tv_pref_set">

        <TextView
            android:id="@+id/tv_cache_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/cache_status"
            android:clickable="false"
            android:textAppearance="@android:style/TextAppearance"
            tools:targetApi="lollipop" />

        <Switch
            android:id="@+id/switch_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_cache_status"
            android:layout_below="@+id/tv_cache_status"
            android:layout_marginStart="16dp"
            android:clickable="false" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_purge_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tv_reset_diff"
        android:layout_below="@+id/ll_cache_status"
        android:layout_marginTop="-36dp"
        android:onClick="purgeCache"
        android:text="@string/reset_cache"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:textAppearance="@android:style/TextAppearance"
        tools:targetApi="lollipop" />

</RelativeLayout>
